tests/single_instruction_translation_validation/mcsema/register-variants-samereg/divb_rh/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:198:35: error: use of undefined value '@__remill_error'
  %22 = tail call %struct.Memory* @__remill_error(%struct.State* nonnull dereferenceable(3376) %1, i64 %21, %struct.Memory* %0) #21
                                  ^
0.02user 0.03system 0:00.11elapsed 58%CPU (0avgtext+0avgdata 27492maxresident)k
0inputs+16outputs (0major+3277minor)pagefaults 0swaps
